fix styling on iphone 5

--- a/_sass/pages/_about.scss
+++ b/_sass/pages/_about.scss
@@ -158,7 +158,11 @@
     
     // Slick overrides
     .slick-dots {
-        bottom: 30px; 
+        bottom: 50px; 
+
+        @media (min-width: 321px) {
+            bottom: 30px;
+        }
         & li.slick-active button:before {
             color: $mainBrandColor; 
             opacity: 1;
